# connecto

./: .env.example  .gitignore  Cargo.toml  Hhh  LICENSE  README.md  config.json  connect-mac-tcp.sh  connect-mac.sh  connect.sh  install.ps1
.github/workflows/: build-windows.yml  ci.yml  release.yml
connecto_cli/: Cargo.toml
connecto_cli/src/: config.rs  main.rs
connecto_cli/src/commands/: keygen.rs  keys.rs  listen.rs  mod.rs  pair.rs  scan.rs  ssh.rs  sync.rs
connecto_core/: Cargo.toml
connecto_core/src/: discovery.rs  error.rs  fallback.rs  keys.rs  lib.rs  protocol.rs  sync.rs
connecto_core/tests/: integration_tests.rs
connecto_gui/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json
connecto_gui/icons/: icon.icns
connecto_gui/icons/macos/: AppIcon.icns
connecto_gui/src/: app.js  index.html  styles.css
connecto_gui/src-tauri/: tauri.conf.json
connecto_gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
connecto_gui/src/app/: App.tsx
connecto_gui/src/app/components/: KeysTab.tsx  ListenTab.tsx  ScanAndPairTab.tsx  SyncTab.tsx
connecto_gui/src/styles/: index.css
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/commands/: completions.md  config.md  export-import.md  hosts.md  keys.md  listen.md  pair.md  scan.md  sync.md  test.md  unpair.md  update-ip.md
docs/src/getting-started/: installation.md  quickstart.md  vpn-setup.md
docs/src/reference/: configuration.md  protocol.md  security.md  troubleshooting.md
packaging/chocolatey/: connecto.nuspec
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
release/: connecto-macos-aarch64.tar.gz.sha256
