[package]
name = "connecto_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for Connecto"

[[bin]]
name = "connecto"
path = "src/main.rs"

[dependencies]
connecto_core = { path = "../connecto_core" }
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
