[package]
name = "connecto_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Connecto - mDNS discovery, SSH key management, and pairing protocol"

[dependencies]
tokio = { workspace = true }
mdns-sd = { workspace = true }
ssh-key = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
hostname = "0.4"
local-ip-address = "0.6"
futures = "0.3"
flume = "0.11"

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
